force-app/main/default/objects/Checklist_Item__c/Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>Document/task line item on a Grant Application. Master-Detail to Grant_Application__c.</description>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>CLI-{00000000}</displayFormat>
        <label>Checklist Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>