force-app/main/default/objects/Checklist_Item__c/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <description>Instructional copy rendered under the item name in the checklistTracker LWC.</description>
    <label>Guidance</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>