force-app/main/default/objects/Checklist_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>