force-app/main/default/objects/Checklist_Item__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
                <default>true</default>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>Grant_Specific</fullName>
                <label>Grant Specific</label>
            </value>
            <value>
                <fullName>User_Added</fullName>
                <label>User Added</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>